# monoscape

./: .env  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: squad-heartbeat.yml
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/morpheus/: charter.md  history.md
.squad/agents/neo/: charter.md  history.md
.squad/agents/oracle/: charter.md  history.md
.squad/agents/ralph/: charter.md
.squad/agents/scribe/: charter.md  history.md
.squad/agents/switch/: charter.md  history.md
.squad/agents/trinity/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/decisions/inbox/: oracle-formatting-toolbar-a11y.md
.squad/identity/: now.md  wisdom.md
.squad/skills/complex-combobox-control/: SKILL.md
.squad/skills/contenteditable-line-indentation/: SKILL.md
.squad/skills/contenteditable-mixed-typography/: SKILL.md
.squad/skills/cross-platform-form-controls/: SKILL.md
.squad/skills/desktop-tauri-topbar/: SKILL.md
.squad/skills/mobile-diagnostics-tooling/: SKILL.md
.squad/skills/platform-conditional-ui/: SKILL.md
.squad/skills/platform-regression-testing/: SKILL.md
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/mobile/: capacitor.config.ts  index.html  package.json  vite.config.ts
apps/web/: index.html  package.json  vite.config.ts
business/: high-level-requirements.md
extensions/: README.md
scripts/: check-architecture.mjs
(+39 files in other folders)
