[package]
name = "monoscape-desktop"
version = "0.1.0"
description = "Monoscape desktop shell"
authors = ["Monoscape"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "dialog-all", "window-all", "dialog"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
